--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPr7S7RyMxHqqWsRNkhhDL5-tOIZ2c2QU&libraries=places"></script>
+
   <title>Stand Up Soirée</title>
 </head>
 <body>
