--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPr7S7RyMxHqqWsRNkhhDL5-tOIZ2c2QU&libraries=places"></script>
-
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Roboto:500" rel="stylesheet">
   <title>Stand Up Soirée</title>
 </head>
 <body>
