Some progress with the new form. Getting errors mapping the results

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="html">
 <head>
   <meta charset="utf-8">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPr7S7RyMxHqqWsRNkhhDL5-tOIZ2c2QU&libraries=places"></script>
