--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPr7S7RyMxHqqWsRNkhhDL5-tOIZ2c2QU&libraries=places"></script>
   <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Roboto:500" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <title>Stand Up Soirée</title>
 </head>
 <body>
